--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="textoPizza">
                         <h3 class="tituloPizzaPrincpal">Unidade</h3>
-                         <p class="titulo-pizza">R$ 5,00.
+                         <p class="titulo-preco">R$ 5,00.
                         </p>
                     </div>
     
@@ -119,7 +119,7 @@
                 </div>
                 <div class="textoPizza">
                     <h3 class="tituloPizzaPrincpal">Kit com 10</h3>
-                     <p class="titulo-pizza">R$ 40,00.
+                     <p class="titulo-preco">R$ 40,00.
                     </p>
                 </div>
     
